// Copyright (c) 2024 - 2025 Restate Software, Inc., Restate GmbH.
// All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

syntax = "proto3";

import "restate/common.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

package restate.cluster;

message ReplicationProperty { string replication_property = 1; }

message BifrostProvider {
  string provider = 1;
  // only required if provider = "replicated"
  optional ReplicationProperty replication_property = 2;
  // only required if provider = "replicated"
  // The default target for new nodesets. 0 (default) auto-chooses a
  // nodeset-size that balances read and write availability. It's a reasonable
  // default for most cases.
  uint32 target_nodeset_size = 3;
}

message ClusterConfiguration {
  uint32 num_partitions = 1;
  optional ReplicationProperty partition_replication = 2;
  BifrostProvider bifrost_provider = 3;
}
